[package]
name = "bevyruman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
bevy_dylib = "0.13.0"
bevy_egui = "0.25.0"
rand = "0.8.5"
smallvec = { version = "1.6", features = ["const_generics"] } # same as bevy 0.12
ron = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"

[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy)
[profile.dev.package."*"]
opt-level = 3
